# encrypted-data-vault

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/: copilot-instructions.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  db.rs  errors.rs  main.rs  models.rs  state.rs  vault.rs
src/components/: DashboardPanel.tsx  EmptyState.tsx  ExplorerPanel.tsx  FullscreenViewer.tsx  GalleryGrid.tsx  GlassCard.tsx  NotesPanel.tsx  SearchBar.tsx  SettingsPanel.tsx  Sidebar.tsx  TagPills.tsx  TopBar.tsx  UnlockScreen.tsx
src/hooks/: useHotkeys.ts  useVault.ts
src/lib/: api.ts  constants.ts  types.ts
src/styles/: index.css
